--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
                     <div class="row no-gutters">
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://salty-coast-38970.herokuapp.com/"
+                            <a target="_blank" href="https://salty-coast-38970.herokuapp.com/"
                                 class="image d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/momlogo1.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -219,7 +219,7 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Data Visualization</h4>
-                                <h2 class="heading"><a href="https://salty-coast-38970.herokuapp.com/">Make Or Miss -
+                                <h2 class="heading"><a target="_blank" href="https://salty-coast-38970.herokuapp.com/">Make Or Miss -
                                         ReactJS/D3</a>
                                 </h2>
                                 <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
@@ -229,12 +229,12 @@
                                     correlation between time left and distance of shot, team efficiency during these
                                     parameters, and all the what ifs that come with it.
                                 </p>
-                                <p><a href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
 
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://bf2344.github.io/MyPortfolio"
+                            <a target="_blank" href="https://bf2344.github.io/MyPortfolio"
                                 class="image order-2 d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/portfolio.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -244,15 +244,15 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Responsive Portfolio Page</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/MyPortfolio">Portfolio Template -
+                                <h2 class="heading"><a target="_blank" href="https://bf2344.github.io/MyPortfolio">Portfolio Template -
                                         HTML/CSS/Javascript/AOS</a></h2>
                                 <p>A portfolio template page created as practice for using HTML/CSS/Javascript. Features
                                     Scrollify on links and also a couple minor CSS Animations. </p>
-                                <p><a href="https://github.com/bf2344/MyPortfolio">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/bf2344/MyPortfolio">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://bf2344.github.io/OnlineStore/"
+                            <a target="_blank" href="https://bf2344.github.io/OnlineStore/"
                                 class="image d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/jordans.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -262,15 +262,15 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Bolt Online</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/OnlineStore/">Mock Online Store -
+                                <h2 class="heading"><a target="_blank" href="https://bf2344.github.io/OnlineStore/">Mock Online Store -
                                         HTML/CSS/Javascript</a></h2>
                                 <p>A mock-up front page of an online shoe store, utilizing Bootstrap and CSS Grid, this
                                     page is my attempt at cloning Finish Line's website</p>
-                                <p><a href="https://github.com/bf2344/OnlineStore">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/bf2344/OnlineStore">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://bf2344.github.io/unit-4-game"
+                            <a target="_blank" href="https://bf2344.github.io/unit-4-game"
                                 class="image order-2 d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/crystal.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -280,15 +280,15 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Crystal Game</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/unit-4-game">Crystal game -
+                                <h2 class="heading"><a target="_blank" href="https://bf2344.github.io/unit-4-game">Crystal game -
                                         HTML/CSS/Javascript</a></h2>
                                 <p>A crystal game where you have to match the number given by clicking on crystal
                                     buttons, which have a random value. </p>
-                                <p><a href="https://github.com/bf2344/unit-4-game">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/bf2344/unit-4-game">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://peaceful-escarpment-83290.herokuapp.com/"
+                            <a target="_blank" href="https://peaceful-escarpment-83290.herokuapp.com/"
                                 class="image d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/project4.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -298,15 +298,15 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">Text Based RPG</h4>
-                                <h2 class="heading"><a href="https://peaceful-escarpment-83290.herokuapp.com/">
+                                <h2 class="heading"><a target="_blank" href="https://peaceful-escarpment-83290.herokuapp.com/">
                                         Game - ReactJS</a></h2>
                                 <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot
                                     Camp I attended at the University of Denver.</p>
-                                <p><a href="https://github.com/KTurnage/Project3">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/KTurnage/Project3">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://peaceful-inlet-18025.herokuapp.com/"
+                            <a target="_blank" href="https://peaceful-inlet-18025.herokuapp.com/"
                                 class="image order-2 d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/weather.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -316,15 +316,15 @@
                             </a>
                             <div class="text order-1">
                                 <h4 class="subheading">Weather Finder</h4>
-                                <h2 class="heading"><a href="https://peaceful-inlet-18025.herokuapp.com/">Weather App -
+                                <h2 class="heading"><a target="_blank" href="https://peaceful-inlet-18025.herokuapp.com/">Weather App -
                                         ReactJS/Weather API</a></h2>
                                 <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country
                                     to return various bits of Weather Data</p>
-                                <p><a href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/bf2344/WeatherFinder">View Github</a></p>
                             </div>
                         </div>
                         <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-                            <a href="https://bf2344.github.io/Emailtemplate/"
+                            <a target="_blank" href="https://bf2344.github.io/Emailtemplate/"
                                 class="image d-flex justify-content-center align-items-center"
                                 style="background-image: url('images/email.png'); "
                                 data-scrollax=" properties: { translateY: '-30%'}">
@@ -334,12 +334,12 @@
                             </a>
                             <div class="text">
                                 <h4 class="subheading">E-Mail Template</h4>
-                                <h2 class="heading"><a href="https://bf2344.github.io/Emailtemplate/">Our Vineyard -
+                                <h2 class="heading"><a target="_blank" href="https://bf2344.github.io/Emailtemplate/">Our Vineyard -
                                         HTML/CSS</a>
                                 </h2>
                                 <p>Our Vineyard is an E-Mail Template I created in order to reinforce skills learned about e-mail development. Includes embedded video as well as logos for the Faux Winery
                                 </p>
-                                <p><a href="https://github.com/bf2344/Emailtemplate">View Github</a></p>
+                                <p><a target="_blank" href="https://github.com/bf2344/Emailtemplate">View Github</a></p>
 
                             </div>
                         </div>
