--- a/blog.html
+++ b/blog.html
@@ -189,13 +189,13 @@
                 <p><a href="./assets/BrianFord.docx">Checkout My Resume</a></p>
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="https://twitter.com/BFordDev"><span
+                  <li class="ftco-animate"><a target="_blank" href="https://twitter.com/BFordDev"><span
                               class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="www.linkedin.com/in/bf2344"><span
+                  <li class="ftco-animate"><a target="_blank" href="www.linkedin.com/in/bf2344"><span
                               class="icon-linkedin"></span></a></li>
-                  <li class="ftco-animate"><a href="https://dribbble.com/BFordDev"><span
+                  <li class="ftco-animate"><a target="_blank" href="https://dribbble.com/BFordDev"><span
                               class="icon-dribbble"></span></a></li>
-                  <li class="ftco-animate"><a href="https://github.com/bf2344"><span
+                  <li class="ftco-animate"><a target="_blank" href="https://github.com/bf2344"><span
                               class="icon-github"></span></a></li>
               </ul>
               </div>
