update resume and make or miss

--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
                                     shot. Explore how standings could have differed, potential wins for that season, the
                                     correlation between time left and distance of shot, team efficiency during these
                                     parameters, and all the what ifs that come with it.
+                                    <br>
+                                    This project was chosen as a Finalist for Trilogy Educations 1st Annual Career Services Next Level Compeitition.
                                 </p>
                                 <p><a target="_blank" href="https://github.com/bf2344/MakeOrMiss">View Github</a></p>
 
