--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,8 @@
               </a>
               <div class="text">
                 <h4 class="subheading">Data Visualization</h4>
-                <h2 class="heading"><a target="_blank" href="https://salty-coast-38970.herokuapp.com/">Make Or Miss - ReactJS/D3</a>
+                <h2 class="heading"><a target="_blank" href="https://salty-coast-38970.herokuapp.com/">Make Or Miss -
+                    ReactJS/D3</a>
                 </h2>
                 <p>Make or Miss is data visualization project based on the 2018-2019 NBA Season. For
                   this project we have chosen to take a look at games that were decided by three
@@ -170,7 +171,8 @@
               </a>
               <div class="text">
                 <h4 class="subheading">Text Based RPG</h4>
-                <h2 class="heading"><a target="_blank" href="https://peaceful-escarpment-83290.herokuapp.com/">Game - ReactJS</a></h2>
+                <h2 class="heading"><a target="_blank" href="https://peaceful-escarpment-83290.herokuapp.com/">Game -
+                    ReactJS</a></h2>
                 <p>A Text Based RPG using ReactJS. The game is based off of the Full Stack Coding Boot Camp I attended
                   at the University of Denver.</p>
                 <p><a target="_blank" href="https://github.com/KTurnage/Project3">View Github</a></p>
@@ -187,7 +189,8 @@
               </a>
               <div class="text order-1">
                 <h4 class="subheading">Weather Finder</h4>
-                <h2 class="heading"><a target="_blank" href="https://peaceful-inlet-18025.herokuapp.com/">Weather App - ReactJS/Weather
+                <h2 class="heading"><a target="_blank" href="https://peaceful-inlet-18025.herokuapp.com/">Weather App -
+                    ReactJS/Weather
                     API</a></h2>
                 <p>This is a Weather App using ReactJS and The OpenWeather API. Input City and Country to return various
                   bits of Weather Data</p>
